test/sema/typeck/assign/class.dora
class X
fn foo() { X = 2i32; }
